docs/vocabulary-fulltable/_sources/type/Chapter/v1/index.rst.txt
:orphan:

Chapter (v1)
============

.. warning::
   This is not the latest version. The latest version is :doc:`v6 <../v6/index>`.

**Previous Version:** none *(this is the oldest version)*

**URI:** `http://clams.ai/vocabulary/type/Chapter/v1 <http://clams.ai/vocabulary/type/Chapter/v1>`_

**Shortname:** ``Chapter``

**Inherits from:** :doc:`TimeFrame (v1) <../../TimeFrame/v1/index>`

**Included in vocabulary versions:** :doc:`1.0.0 <../../../1.0.0/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/Chapter/v1 <http://mmif.clams.ai/vocabulary/Chapter/v1>`_
- `http://mmif.clams.ai/0.4.0/vocabulary/Chapter/ <http://mmif.clams.ai/0.4.0/vocabulary/Chapter/>`_
- `http://mmif.clams.ai/0.4.1/vocabulary/Chapter/ <http://mmif.clams.ai/0.4.1/vocabulary/Chapter/>`_
- `http://mmif.clams.ai/0.4.2/vocabulary/Chapter/ <http://mmif.clams.ai/0.4.2/vocabulary/Chapter/>`_


Description
-----------

Example case for when we do not want to use Segment with a specific segmentType or if we want to introduce special properties.


Properties
----------

*Properties marked with* **\*** *are required.*


.. list-table::
   :header-rows: 1
   :widths: 15 10 75

   * - Property
     - Type
     - Description
   * - ``title``
     - string
     - Title of the chapter

*Inherited from* :doc:`TimeFrame (v1) <../../TimeFrame/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``frameType``
     - string
     - The type of TimeFrame. Could be bars-and-tones, speech, noise, music, other.

*Inherited from* :doc:`Interval (v1) <../../Interval/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``end``
     - integer
     - The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.
   * - ``start``
     - integer
     - The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.
   * - ``targets``
     - array of string
     - IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation).

*Inherited from* :doc:`Region (v1) <../../Region/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``timeUnit``
     - string
     - Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.

*Inherited from* :doc:`Annotation (v2) <../../Annotation/v2/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``document``
     - string
     - The identifier of the document that the annotation is over.

*Inherited from* :doc:`Thing (v1) <../../Thing/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``id`` **\***
     - string
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       },
       "start": {
         "type": "integer",
         "description": "The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "end": {
         "type": "integer",
         "description": "The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "targets": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation)."
       },
       "frameType": {
         "type": "string",
         "description": "The type of TimeFrame. Could be bars-and-tones, speech, noise, music, other."
       },
       "title": {
         "type": "string",
         "description": "Title of the chapter"
       }
     },
     "required": [
       "id"
     ],
     "type": "object"
   }